# docs/swagger.json
@@ -44,12 +44,12 @@
                 "summary": "Create a new feed",
                 "parameters": [
                     {
-                        "description": "Feed data",
+                        "description": "CreateFeedRequest data",
                         "name": "feed",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.Feed"
+                            "$ref": "#/definitions/request.CreateFeedRequest"
                         }
                     }
                 ],
@@ -73,7 +73,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Feed ID",
+                        "description": "CreateFeedRequest ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -81,7 +81,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Feed deleted successfully"
+                        "description": "CreateFeedRequest deleted successfully"
                     }
                 }
             }
@@ -96,7 +96,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Feed ID",
+                        "description": "CreateFeedRequest ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -104,7 +104,7 @@
                 ],
                 "responses": {
                     "204": {
-                        "description": "Feed synced successfully"
+                        "description": "CreateFeedRequest synced successfully"
                     }
                 }
             }
@@ -128,7 +128,7 @@
                 }
             }
         },
-        "request.Feed": {
+        "request.CreateFeedRequest": {
             "type": "object",
             "required": [
                 "title",
